Project structure refined

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (main main.cc renderer.cc)
+add_executable (main main.cc renderer.cc displayElements.cc process.cc)
 
 find_library(SDL2 NAMES sdl2 libSDL2)
 find_library(SDL2_image NAMES libSDL2_image)
