Refined structure; Implemeted STK functionality.
Added test sine wave demo which works at same time as sdl using stk's stremaing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ project (Svvfjt)
 
 add_subdirectory(src)
 
+add_definitions(-D__LINUX_ALSA__)   # Otherwise stk won't know what driver to use and will fail to include pthread
