--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,6 @@ add_executable (main main.cc renderer.cc displayElements.cc process.cc audioSynt
 find_library(SDL2 NAMES sdl2 libSDL2)
 find_library(SDL2_image NAMES libSDL2_image)
 find_library(stk NAMES libstk)
+find_library(libwiringPi NAMES libwiringPi)
 
-
-target_link_libraries(main SDL2 stk)
+target_link_libraries(main SDL2 stk wiringPi)
